<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/drawerLayoutMain">

    <!-- Main Content -->
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- AppBarLayout and Toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:fitsSystemWindows="true"
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:backgroundTint="@color/colorPrimary"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_main_top_bar"
                app:navigationIcon="@drawable/ic_menu_hamburger"
                app:titleTextColor="@color/textOnPrimary"
                app:navigationIconTint="@color/textOnPrimary"
                app:title="@string/app_name"
                app:titleCentered="true" />
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Main Layout -->
        <LinearLayout
            android:id="@+id/llayoutWithItemsMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:orientation="vertical"
            android:visibility="invisible">

    <!-- Attachment Icon
   <com.google.android.material.search.SearchBar
       android:id="@+id/search_bar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/search" />
-->

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/messageBoardRecView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:clipToPadding="true" />
</LinearLayout>

<LinearLayout
   android:id="@+id/llayoutEmptyMain"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:layout_below="@id/appBarLayout"
   android:gravity="center"
   android:orientation="vertical"
   android:visibility="visible">

   <ImageView
       android:id="@+id/logoImage"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:layout_gravity="center_horizontal"
       android:src="@drawable/ic_messages" />

    <TextView
        android:id="@+id/txtEmptyMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/looks_quite_here_say_hi_to_someone"
        android:textColor="@color/textSecondary"
        android:textSize="16sp" />
</LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnNewConv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/bottom_nav_main"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@color/colorPrimary"
            app:tint="@color/textOnPrimary"
            android:src="@drawable/ic_edit" />
<include
   android:id="@+id/bottom_nav_main"
   layout="@layout/nav_bottom"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_alignParentBottom="true" />
</RelativeLayout>

<!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background"
        app:headerLayout="@layout/header_navigation_drawer_main" 
        app:menu="@menu/main_menu" />



</androidx.drawerlayout.widget.DrawerLayout>
