<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent">



        <LinearLayout
            android:id="@+id/main_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <!-- Left Image Section -->

            <!-- Middle Section for Name and Message -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/mesBrdImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_blank_profile"
                app:shapeAppearanceOverlay="@style/CircularImage" />

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_item_disp_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="Contact Name"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/mesBrdMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="Last message here ......" />
            </LinearLayout>

            <!-- Right Section for Time -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_item_not_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/bg_text_round_red"
                    android:fontFamily="serif"
                    android:paddingStart="8dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="1dp"
                    android:text="1000"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_item_last_msg_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:text="HH:mm" />
            </LinearLayout>

        </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_ll" />
</RelativeLayout>
